add multi markers

--- a/index.html
+++ b/index.html
@@ -4,37 +4,74 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>My Simple Website</title>
+    <title>Leaflet Map Example</title>
+    <link rel="stylesheet" href="https://unpkg.com/leaflet/dist/leaflet.css" />
+    <style>
+        #map {
+            height: 600px;
+            width: 100%;
+        }
+    </style>
 </head>
 
 <body>
     <header>
-        <h1>Welcome to My Website</h1>
+        <h1>Welcome to My Leaflet Map</h1>
     </header>
-    <nav>
-        <ul>
-            <li><a href="#home">Home</a></li>
-            <li><a href="#about">About</a></li>
-            <li><a href="#contact">Contact</a></li>
-        </ul>
-    </nav>
     <main>
-        <section id="home">
-            <h2>Home</h2>
-            <p>This is the home page of my website.</p>
-        </section>
-        <section id="about">
-            <h2>About</h2>
-            <p>This website is created using HTML and CSS.</p>
-        </section>
-        <section id="contact">
-            <h2>Contact</h2>
-            <p>You can contact me via email: example@example.com</p>
-        </section>
+        <div style="width: 50%;" id="map"></div>
     </main>
     <footer>
         <p>&copy; 2024 My Website. All rights reserved.</p>
     </footer>
+
+    <script src="https://unpkg.com/leaflet/dist/leaflet.js"></script>
+    <script>
+        // Initialize the map with China as the initial view
+        const map = L.map('map').setView([22.8617, 104.1954], 3.5);
+
+        // Add OpenStreetMap tiles
+        L.tileLayer('https://{s}.tile.openstreetmap.org/{z}/{x}/{y}.png', {
+            attribution: 'Map data © <a href="https://openstreetmap.org">OpenStreetMap</a> contributors'
+        }).addTo(map);
+
+        // Add markers for cities with more information
+        const cities = [
+            {
+                name: `
+                    <b>Shanghai</b><br>
+                    Population: 24.28 million (2019)<br>
+                    Area: 6,340.5 km²<br>
+                    Famous for: The Bund, Oriental Pearl Tower
+                `,
+                location: [31.2304, 121.4737]
+            },
+            {
+                name: `
+                    <b>Hangzhou</b><br>
+                    Population: 10.36 million (2019)<br>
+                    Area: 16,596 km²<br>
+                    Famous for: West Lake, Lingyin Temple
+                `,
+                location: [30.2741, 120.1551]
+            },
+            {
+                name: `
+                    <b>Shenzhen</b><br>
+                    Population: 13.44 million (2019)<br>
+                    Area: 1,997.47 km²<br>
+                    Famous for: Window of the World, OCT East
+                `,
+                location: [22.5431, 114.0579]
+            }
+        ];
+
+        cities.forEach(city => {
+            L.marker(city.location)
+                .addTo(map)
+                .bindPopup(`<b>${city.name}</b>`);
+        });
+    </script>
 </body>
 
 </html>
